--- a/time-varying-cox.qmd
+++ b/time-varying-cox.qmd
@@ -28,6 +28,7 @@ library(survPen)
 library(survival)
 library(rms)
 library(ggsurvfit)
+library(survminer)
 library(riskRegression)
 
 ```
@@ -94,6 +95,8 @@ survfit2(Surv(futime, fustat) ~ transplant, data = dat) |>
 coxph(Surv(futime, fustat) ~ transplant, data = jasa) |> 
   gtsummary::tbl_regression(exponentiate = TRUE)
 
+
+
 ```
 
 ## この解析の問題は？
@@ -139,6 +142,22 @@ data= sdata, ties="breslow")
 options(show.signif.stars = FALSE)
 
 vfit <- coxph(Surv(time, status) ~ trt + prior + karno, data = veteran)
+
+quantile(veteran$karno)
+
+zp <- cox.zph(vfit, transform = function(time)log(time + 20))
+
+survminer::ggcoxzph(zp, var = "karno") |> ggpubr::ggpar(ylim = c(-0.12, 0.04))
+
+vet2 <- survSplit(Surv(time, status) ~ ., data = veteran, cut = c(90, 180), episode = "tgroup", id = "id")
+
+knitr::kable(head(dplyr::select(vet2, id, tstart, time, status, tgroup, age, karno))) |> 
+  kableExtra::kable_styling(latex_options = "scale_down")
+
+
+vfit2 <- coxph(Surv(tstart, time, status) ~ trt + prior +
+karno:strata(tgroup), data=vet2)
+
 
 ```
 
