--- a/time-varying-cox.qmd
+++ b/time-varying-cox.qmd
@@ -2,7 +2,7 @@
 title: "How to analysis in R"
 author: "Nozomi Niimi"
 execute:
-  echo: true
+  echo: false
 format:
   revealjs
 ---
@@ -43,14 +43,7 @@ library(riskRegression)
     -   放射線曝露は若年者と高齢者で与える影響はおそらく変わる
 -   どうする？
 
-## 簡単な解決方法
-
--   細かく時間を区切って分ける
--   例
-
 ## time-varying covariates
-
--   実は2種類存在する
 
 1.  時間と共に値が変化する共変量
 2.  時間とともに係数が変化する
@@ -85,7 +78,7 @@ knitr::kable(head(dat, 5)) |>
 | Column name   | Meaning                                            |
 +===============+====================================================+
 | subject       | Patients' ID                                       |
-|               |                                                    |
++--------------------------------------------------------------------+|
 | tx.date       | Transplant date                                    |
 +---------------+----------------------------------------------------+
 | futime        | Follow-up time                                     |
@@ -133,7 +126,8 @@ coxph(Surv(futime, death_1) ~ transplant , data = dat) |>
 
 -   悪性腫瘍の患者で、放射線曝露量と予後を見る
     -   途中で亡くなる患者は放射線療法を最後まで受けられない\n → 治療効果を過大に推定してしまう!!
-    -   放射線の被曝量が多いほど予後が良い？\n → そのまま信じると危険！
+    -   放射線の被曝量が多いほど予後が良い？ 
+    → そのまま信じると危険！
 
 ## どうすればいい？
 
